Bug 225552 - digiKam can't remember setting
Summary: digiKam can't remember setting
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Usability-Menus (other bugs)
Version First Reported In: 1.1.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-04 22:33 UTC by Stefan T.
Modified: 2017-08-10 12:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan T. 2010-02-04 22:33:03 UTC
Version:           1.1.0 (using KDE 4.4.0)
OS:                Linux
Installed from:    Ubuntu Packages

digikam 1.1.0, kipi-plugins 1.1.0, Kubuntu 9.10 with KDE 4.4 RC2. digikam is not from their repository, I compiled it...

This is small bug, not very important and only the first I am going to report, but it would be nice if you could find time to fix it. :)))

1. Settings / Show menus.

Menus are hidden.

2. View / Full Screen Mode.

3. Exit from Full Screen Mode.

Menus should be hidden now, but they are not. This applies to digikam main window, Batch Queue Manager and Image Editor.

Thanks!
Comment 1 Andi Clemens 2010-10-01 21:23:11 UTC
SVN commit 1181689 by aclemens:

Set menubar according to the actual settings...

BUG: 225552

 M  +2 -1      NEWS  
 M  +2 -3      digikam/digikamapp.cpp  
 M  +2 -3      utilities/cameragui/cameraui.cpp  
 M  +2 -3      utilities/imageeditor/editor/editorwindow.cpp  
 M  +2 -3      utilities/lighttable/lighttablewindow.cpp  
 M  +2 -3      utilities/queuemanager/queuemgrwindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1181689