Set menubar according to the actual settings...

BUG: 225552

svn path=/trunk/extragear/graphics/digikam/; revision=1181689