utilities/imageeditor/editor/editorwindow.cpp
@@ -1039,7 +1039,7 @@ void EditorWindow::slotToggleFullScreen()
 
         m_canvas->setBackgroundColor(m_bgColor);
 
-        menuBar()->show();
+        slotShowMenuBar();
         statusBar()->show();
         showToolBars();
 
@@ -2225,8 +2225,7 @@ void EditorWindow::setToolStopProgress()
 
 void EditorWindow::slotShowMenuBar()
 {
-    const bool visible = menuBar()->isVisible();
-    menuBar()->setVisible(!visible);
+    menuBar()->setVisible(d->showMenuBarAction->isChecked());
 }
 
 void EditorWindow::slotCloseTool()
