utilities/queuemanager/queuemgrwindow.cpp
@@ -613,7 +613,7 @@ void QueueMgrWindow::slotToggleFullScreen()
     {
         setWindowState( windowState() & ~Qt::WindowFullScreen ); // reset
 
-        menuBar()->show();
+        slotShowMenuBar();
         statusBar()->show();
         showToolBars();
 
@@ -825,8 +825,7 @@ void QueueMgrWindow::populateToolsList()
 
 void QueueMgrWindow::slotShowMenuBar()
 {
-    const bool visible = menuBar()->isVisible();
-    menuBar()->setVisible(!visible);
+    menuBar()->setVisible(d->showMenuBarAction->isChecked());
 }
 
 void QueueMgrWindow::slotRun()
